--- a/css/styles.css
+++ b/css/styles.css
@@ -6108,7 +6108,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #bd5d38 !important;
+  background-color: #3b5998 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
