--- a/css/styles.css
+++ b/css/styles.css
@@ -9807,11 +9807,11 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #bd5d38 !important;
+  color: #3b5998 !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
-  color: #824027 !important;
+  color: #3b5998 !important;
 }
 
 .text-secondary {
